<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_filled_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/history"/>
    </group>
    <item
        android:title="@string/another_option">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_info_24"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_login_24"
                android:title="@string/login"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>