<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/alabaster"
    tools:context=".activity.AddAddressActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:paddingTop="38dp"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:navigationIconTint="@color/white"
        android:background="@color/red">
        <TextView
            android:id="@+id/txtTitleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_address"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollViewAddAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:maxLines="1"
                    android:hint="@string/hint_fullname"
                    android:background="@drawable/white_background_and_stroke_silver"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:maxLines="1"
                    android:hint="@string/hint_phone_number"
                    android:background="@drawable/white_background_and_stroke_silver"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtStreet"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:maxLines="1"
                    android:hint="@string/hint_house_number"
                    android:background="@drawable/white_background_and_stroke_silver"
                    android:inputType="textPostalAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtWard"
                    android:hint="@string/hint_ward"
                    android:background="@drawable/white_background_and_stroke_silver"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDistrict"
                    android:hint="@string/hint_district"
                    android:background="@drawable/white_background_and_stroke_silver"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCity"
                    android:hint="@string/hint_province"
                    android:background="@drawable/white_background_and_stroke_silver"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchSetDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/set_address_default"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/save_address"
                android:background="@drawable/red_background"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>