<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/alabaster"
    tools:context=".activity.OrderSuccessActivity">

    <ImageView
        android:id="@+id/imgSuccess"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/baseline_check_circle_24"
        app:tint="@color/green_success" />
    <TextView
        android:id="@+id/txtSuccessTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_successful"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtSuccessMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_trusting"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Mã đơn hàng: #ABC123XYZ"
        android:textColor="@color/neutral_600"
        android:textSize="14sp"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back_home"
        android:background="@drawable/red_background"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

</LinearLayout>