<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/alabaster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:paddingTop="38dp"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:navigationIconTint="@color/white"
        android:background="@color/red">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollViewSettingScreen"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchNotification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/get_notification"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/gray" />

            <TextView
                android:id="@+id/txtDeleteAccount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:clickable="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/delete_account"
                android:gravity="center_vertical"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/viewDividerDeleteAccount"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="@color/gray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:text="@string/logout"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:background="@drawable/orange_background"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:text="@string/login"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:background="@drawable/orange_background"
                android:layout_marginHorizontal="24dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="350dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>