<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/red"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logoyummybee"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="false"
            app:endIconMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="16dp"
                android:hint="@string/hint_email"
                android:background="@drawable/white_background"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="false"
            app:endIconTint="@color/gray"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="16dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@drawable/white_background"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:paddingHorizontal="4dp"
                android:text="@string/register_now_txt"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="end"
                android:paddingHorizontal="4dp"
                android:text="@string/forgot_password_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:background="@drawable/orange_background"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="58dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNonLogin"
            android:text="@string/continue_with_no_login_txt"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@drawable/orange_background"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="58dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="350dp"/>
    </LinearLayout>
</ScrollView>